crates/agent/src/controllers/snapshots/agent__controllers__inferred_schema__test__update-after-a-schema-updated-1.snap
---
source: crates/agent/src/controllers/inferred_schema.rs
expression: "(update, &publications)"
info:
  catalog_name: a/a
  prev_state:
    active: true
    next_run: "2024-01-01T08:02:00Z"
    updated_at: "2024-01-01T08:01:00Z"
    status:
      schema_last_updated: "2024-01-01T08:01:00Z"
      schema_md5: ~
      publications:
        pending: ~
        history: []
        last_observed:
          id: "0100000000000000"
          completed: "2024-01-01T08:01:00Z"
          result:
            type: success
    failures: 0
---
[
  {
    "active": true,
    "next_run": null,
    "status": {
      "schema_last_updated": "2024-01-01T08:01:00Z",
      "schema_md5": null,
      "publications": {
        "pending": {
          "id": "0200000000000000",
          "created": "2024-01-01T08:02:00Z"
        },
        "history": [],
        "last_observed": {
          "id": "0100000000000000",
          "completed": "2024-01-01T08:01:00Z",
          "result": {
            "type": "success"
          }
        }
      }
    }
  },
  [
    {
      "draft": {
        "collections": {
          "a/a": {
            "writeSchema": {
              "$serde_json::private::RawValue": "{\"properties\":{\"id\":{\"type\":\"string\"}},\"type\":\"object\"}"
            },
            "readSchema": {
              "$serde_json::private::RawValue": "{\"allOf\":[{\"$ref\":\"flow://inferred-schema\"},{\"$ref\":\"flow://write-schema\"}]}"
            },
            "key": [
              "/id"
            ]
          }
        }
      },
      "publication_meta": [
        "0200000000000000",
        "2024-01-01T08:02:00Z"
      ]
    }
  ]
]
